fixed line breaks in commit messages

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ table {
     border: 3px solid #f76501;
     background-color: #CCC;
     width:100%;
-    height: 120px;
+    height: 135px;
     position:relative;
 }
 
